--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -5,8 +5,8 @@ layout: default
 
 <!-- call up the image and image credit link -->
   {% for image in page.image %}
-  <div class="xs-p2">
-    <img itemprop="image" src="{{ image }}" />
+  <div class="image-container xs-p2">
+    <img itemprop="image" src="https://drive.google.com/uc?export=download&id={{ image }}" />
   </div>
   {% endfor %}
 
@@ -77,8 +77,8 @@ layout: default
       <h4 class="blue center">{{recipe.title}}</h4>
 
       {% for image in recipe.image %}
-      <div class="image ratio bg-cover" style="background-image:url({{ image }});">
-        <img class="hide" itemprop="photo" src="{{ image }}" />
+      <div class="image ratio bg-cover" style="background-image:url(https://drive.google.com/uc?export=download&id={{ image }});">
+        <img class="hide" itemprop="photo" src="https://drive.google.com/uc?export=download&id={{ image }}" />
       </div>
       {% endfor %}
 
