--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 ---
 
 img{width:100%;}
+.image-container{width: 50%; margin-left: 25%;}
 .no-line-height{line-height:0;}
 ul{margin:0; padding:0; list-style:none;}
 ul li{  padding:0 0 0 25px; position:relative;}
