--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -3,11 +3,9 @@ layout: default
 ---
 <div class="container" itemscope itemtype="http://schema.org/Recipe">
 
-  {% for image in page.image %}
   <div class="image-container xs-p2">
-    <img itemprop="image" src="https://drive.google.com/uc?export=download&id={{ image }}" />
+    <img itemprop="image" src="{{ page.relative_path | replace: ('.html', '.jpg') }}" />
   </div>
-  {% endfor %}
 
   <article class="post-content px2">
 
