Fix urls with jekyll replace syntax
Used jinja replace by mistake earlier

--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container" itemscope itemtype="http://schema.org/Recipe">
 
   <div class="image-container xs-p2">
-    <img itemprop="image" src="{{ page.relative_path | replace: ('.html', '.jpg') }}" />
+    <img itemprop="image" src="{{ page.url | replace:'.html','.jpg' }}" />
   </div>
 
   <article class="post-content px2">
